# matricula-online-scraper

./: .containerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Containerfile  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: cache-parishes.yml  container.yml  publish.yml  ruff.yml
examples/newsfeed-mailer/: README.md  check-newsfeed.py  check-newsfeed.service  check-newsfeed.timer  config.env  install-cronjob.sh
matricula_online_scraper/: logging_config.py  main.py
matricula_online_scraper/cli/: common.py  fetch.py  get.py  newsfeed.py  parish.py  utils.py
matricula_online_scraper/cli/cli_utils/: badges.py  color.py
matricula_online_scraper/middlewares/: Catch404.py  custom_http_error.py
matricula_online_scraper/pipelines/: images_pipeline.py  parish_pipeline.py
matricula_online_scraper/spiders/: church_register.py  locations_spider.py  newsfeed_spider.py  parish.py  parish_list.py  parish_metadata.py  parish_registers_spider.py  utils.py
matricula_online_scraper/utils/: common_error.py  matricula_url.py  shorten_path.py  singleton.py  user_console.py
tests/api_tests/: test_host.py
tests/typer/: test_fetch.py  test_main.py
tests/unit_tests/: test_cli_utils.py
tools/newsfeed-mailer/: check-newsfeed.service  check-newsfeed.timer
